samples/_failures_safe/1761256640_874c71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4bdb614.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d4bdb614.c:183:20: error: missing terminating " character
  183 |             printf("
      |                    ^
./samples/SAFE/__tmp_d4bdb614.c:183:13: error: expected expression at end of input
  183 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_d4bdb614.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4bdb614.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4bdb614.c:183:13: error: expected declaration or statement at end of input
